--- a/SchedulingAssistant/SchedulingAssistant.csproj
+++ b/SchedulingAssistant/SchedulingAssistant.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.58.0" />
+    <PackageReference Include="Google.Apis.Calendar.v3" Version="1.58.0.2759" />
+  </ItemGroup>
+
 </Project>
