--- a/SchedulingAssistant/SchedulingAssistant.csproj
+++ b/SchedulingAssistant/SchedulingAssistant.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.58.0" />
+    <PackageReference Include="Google.Apis.Auth.Mvc" Version="1.58.0" />
     <PackageReference Include="Google.Apis.Calendar.v3" Version="1.58.0.2759" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
   </ItemGroup>
